--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
      <meta name="description" content="Frontend Mentor Coding Bootcamp Slider">
      <meta name="author" content="Scott Clingan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
   </head>
